<resources>
    //Connection
    <string name="connectionError">Connection fail!</string>
    <string name="checkConnection">Please check your internet connection</string>
    <string name="ok">Ok</string>
    //Search
    <string name="app_name">RoomForRent</string>
    <string name="category">Category</string>
    <string name="address">Address</string>
    <string name="amount">Amount</string>
    <string name="peroid">Peroid</string>
    <string name="search">Search</string>
    <string name="hintAmountTxt">Enter Amount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Favourite
    <string name="favourite">Favourite</string>
    <string name="nohaveFav">There is no  favourite house!</string>
    <string name="nohaveHouse">There is no house!</string>
    <string name="nologin">Need to login to see your favourite house!</string>

    //RenderProfileScreen
    <string name="image_contentDescription">image</string>
    <string name="plz_login_text">Please login to your account</string>
    <string name="version_text_description">Version 1.0 9/2/2021</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN IN</string>
    //LoginScreen
    <string name="login">Login</string>
    <string name="login_text">Sign In To Your Account</string>
    <string name="name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>

    //ChangePasswordScreen
    <string name="current_pw">Current Password</string>
    <string name="new_pw">New Password</string>
    <string name="confirm_pw">Retype New Password</string>
    <string name="btn_updatePassword">Update</string>

    <!--owner image-->
    <string name="owner_image_contentDescription">owner image</string>
    <!--Personal info image-->
    <string name="owner_personal_image_contentDescription">image</string>

    <!--owner profile version-->
    <string name="owner_profile_version">VERSION 2.21(12.12019)</string>

    <!--owner profile logout-->
    <string name="owner_profile_logout">Logout</string>

    <!--personal info toolbar-->
    <string name="personal_info_toolbar_text">Save</string>

    <!--personal info -->
    <string name="personal_info_text">Edit personal info</string>
    <string name="personal_info_des_user_name">User Name</string>
    <string name="personal_info_first_name">Chaw Suu </string>
    <string name="personal_info_des_last_name">Last name</string>
    <string name="personal_info_last_name">Hlaing</string>
    <string name="personal_info_gender">Gender</string>
    <string name="personal_info_birth_date">Birth date</string>
    <string name="personal_info_email">Email</string>
    <string name="personal_info_phone_num1">Phone number1</string>
    <string name="personal_info_phone_num2">Phone number2</string>

    <!--gender popup info -->
    <string name="gender_text">Gender</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="other_text">Other</string>
    <string name="title_activity_location">Map</string>

    <!--Post House info -->
    <string name="choose_category">Please Choose Your House Type</string>
    <string name="township">Please Choose Township</string>
    <string name="post_house">Post House</string>
    <string name="photo_of_your_house">Photos of Your House</string>
    <string name="street_building_floor">Ward,Street,Building No.</string>
    <string name="no_of_guest">No Of Guests</string>
    <string name="no_of_room">No Of Room</string>
    <string name="no_of_toilet">No Of Toilet</string>
    <string name="area">Area (Square feet)</string>
    <string name="no_of_bathroom">No Of Bathroom</string>
    <string name="no_of_floor">No Of Floor</string>
    <string name="no_of_aircon">No Of Air con</string>
    <string name="contract_rule">Contract Rule</string>
    <string name="wifi">Wifi</string>
    <string name="contract_period">Contract Period</string>
    <string name="rent_per_month">Rent Per Month</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="description">description</string>
    <string name="contact_one">Contact 1</string>
    <string name="contact_two">Contact 2</string>
    <string name="deposit">Deposit</string>
    <string name="available_date">Available Date</string>
    <string name="recommended_point">Recommended Point</string>
    <string name="create_house_login">Need to login to create your house!</string>
    <string name="create_house_login_with_owner">Need to login with owner to create house!</string>
    <string name="location_of_house">Select the location of your house</string>

    //fb
    <string name="facebook_app_id">247575357151339</string>
    <string name="fb_login_protocol_scheme">fb247575357151339</string>
</resources>