<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".RenderProfileActivity"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
            android:text="RentHouse"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/roboto"
            android:textSize="@dimen/intro_screen_title_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="@dimen/intro_screen_image_marginTop"
            android:contentDescription="@string/image_contentDescription"
            android:src="@drawable/usher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/plz_login_text_marginTop"
            android:text="@string/plz_login_text"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/plz_login_text_size"
            android:fontFamily="@font/roboto"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/btn_marginStartEnd"
            android:layout_marginTop="@dimen/intro_screen_sign_in_btn_marginTop"
            android:layout_marginEnd="@dimen/btn_marginStartEnd"
            android:background="@drawable/shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size"
            android:fontFamily="@font/roboto"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/version_text_marginStartEnd"
            android:layout_marginTop="@dimen/version_text_marginTop"
            android:layout_marginEnd="@dimen/version_text_marginStartEnd"
            android:gravity="center"
            android:text="@string/version_text_description"
            android:textColor="@color/secondary_text_color"
            android:fontFamily="@font/roboto"
            android:textSize="@dimen/version_text_size" />
    </LinearLayout>

</FrameLayout>