<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="20dp"
            android:id="@+id/layout_gender"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/gender_text"
                android:fontFamily="@font/roboto"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/divider_color" />

                <RadioGroup
                    android:id="@+id/rg_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <!--Male Rdb-->
                    <RadioButton
                        android:layout_marginTop="20dp"
                        android:id="@+id/rb_male"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="200dp"
                        android:layoutDirection="rtl"
                        android:textAlignment="textStart"
                        android:layout_gravity="start"
                        android:text="@string/male_text"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto"

                        />

                    <!--female Rdb-->
                    <RadioButton
                        android:layout_marginTop="20dp"
                        android:id="@+id/rb_female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="200dp"
                        android:layoutDirection="rtl"
                        android:textAlignment="textStart"
                        android:layout_gravity="start"
                        android:text="@string/female_text"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto"
                        />

                    <!--other Rdb-->
                    <RadioButton
                        android:layout_marginTop="20dp"
                        android:id="@+id/rb_other"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="200dp"
                        android:layoutDirection="rtl"
                        android:textAlignment="textStart"
                        android:layout_gravity="start"
                        android:text="@string/other_text"
                        android:fontFamily="@font/roboto"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        />

                </RadioGroup>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>