<?xml version="1.0" encoding="utf-8"?>
<!--TODO (Step 4: Design the Sign Up screen layout as per our requirement.)-->
<!--START-->
<!--The values for the drawable items, dimen, string and color values are added in their respective folders and files.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChangePasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverLay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarChangePassword"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbarbg"
            app:popupTheme="@style/PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/changePassword_screen_content_marginTop"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_marginTop"
            android:gravity="center"
            android:text="Change Your Password"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:textSize="@dimen/changePassword_description_text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_current_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/changePassword_screen_marginStartEnd"
            android:layout_marginTop="@dimen/changePassword_tv_marginTop"
            android:layout_marginRight="@dimen/changePassword_screen_marginStartEnd"
            android:background="@drawable/text_rounded"
            android:fontFamily="@font/roboto"
            android:hint="@string/current_pw"
            android:padding="@dimen/changePassword_tv_padding"
            android:textSize="@dimen/et_text_size" />


        <EditText
            android:id="@+id/et_new_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/changePassword_screen_marginStartEnd"
            android:layout_marginTop="@dimen/changePassword_tv_marginTop"
            android:layout_marginRight="@dimen/changePassword_screen_marginStartEnd"
            android:background="@drawable/text_rounded"
            android:hint="@string/new_pw"
            android:fontFamily="@font/roboto"
            android:padding="@dimen/changePassword_tv_padding"
            android:textSize="@dimen/et_text_size"
            />
        <EditText
            android:id="@+id/et_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/changePassword_screen_marginStartEnd"
            android:layout_marginTop="@dimen/changePassword_tv_marginTop"
            android:layout_marginRight="@dimen/changePassword_screen_marginStartEnd"
            android:background="@drawable/text_rounded"
            android:hint="@string/confirm_pw"
            android:fontFamily="@font/roboto"
            android:padding="@dimen/changePassword_tv_padding"
            android:textSize="@dimen/et_text_size"
            />


        <Button
            android:id="@+id/btn_updatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/changePassword_screen_marginStartEnd"
            android:layout_marginTop="@dimen/changePassword_tv_marginTop"
            android:layout_marginRight="@dimen/changePassword_screen_marginStartEnd"
            android:background="@drawable/shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/btn_updatePassword"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size"
            app:backgroundTint="@android:color/white"
            android:fontFamily="@font/roboto"
            app:backgroundTintMode="multiply" />

    </LinearLayout>
</LinearLayout>
    <!--END-->