<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppBarOverLay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBarSearch"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/toolbarbg"
                app:popupTheme="@style/PopupOverlay" >
                <TextView
                    style="@style/ToolBarTitle"
                    android:text="@string/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_img_height"
                android:background="@drawable/searchhomeimg"
                android:scaleType="fitXY" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/elevation"
                app:cardCornerRadius="@dimen/cardview_margin"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/cardview_layout_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/category"
                            android:textColor="@color/black"
                            android:fontFamily="@font/roboto"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/category_text_left"
                            android:layout_weight="1"
                            android:text="@string/address"
                            android:textColor="@color/black"
                            android:fontFamily="@font/roboto"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/categorySpinner"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spinner_height"
                            android:layout_marginRight="@dimen/spinner_align"
                            android:layout_weight="1"
                            android:background="@drawable/spinnerbg"
                            android:gravity="start"
                            android:spinnerMode="dropdown" />

                        <Spinner
                            android:id="@+id/addressSpinner"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spinner_height"
                            android:layout_marginLeft="@dimen/spinner_align"
                            android:layout_weight="1"
                            android:background="@drawable/spinnerbg"
                            android:gravity="center"
                            android:spinnerMode="dropdown" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/amount"
                            android:fontFamily="@font/roboto"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/category_text_left"
                            android:layout_weight="1"
                            android:text="@string/peroid"
                            android:fontFamily="@font/roboto"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edt_amount"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spinner_height"
                            android:layout_marginRight="@dimen/spinner_align"
                            android:layout_weight="1"
                            android:background="@drawable/textboxbg"
                            android:hint="@string/hintAmountTxt"
                            android:fontFamily="@font/roboto"
                            android:textSize="15dp"
                            android:paddingLeft="@dimen/textbox_padding_left"
                            android:inputType="number" />

                        <Spinner
                            android:id="@+id/peroidSpinner"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spinner_height"
                            android:layout_marginLeft="@dimen/spinner_align"
                            android:layout_weight="1"
                            android:background="@drawable/spinnerbg"
                            android:gravity="center"
                            android:spinnerMode="dropdown" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_serach"
                        android:layout_width="@dimen/search_btn_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/search_button_margin"
                        android:background="@drawable/buttonbg"
                        android:text="@string/search"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>
