<?xml version="1.0" encoding="utf-8"?>
<!--TODO (Step 4: Design the Sign Up screen layout as per our requirement.)-->
<!--START-->
<!--The values for the drawable items, dimen, string and color values are added in their respective folders and files.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverLay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarLogin"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbarbg"
            app:popupTheme="@style/PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:weightSum="11"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_marginTop"
            android:gravity="center"
            android:text="Already have an Account?"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:layout_weight="1"
            android:textSize="@dimen/authentication_description_text_size"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/image_contentDescription"
            android:layout_weight="1"
            android:src="@drawable/download" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/layout_margin">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/email_tv_marginLeftRight"
                    android:layout_marginRight="@dimen/email_tv_marginLeftRight"
                    android:layout_marginTop="@dimen/email_tv_marginTop"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="@dimen/layout_margin"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/layout_margin" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_weight="1"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/email_tv_marginLeftRight"
                    android:layout_marginRight="@dimen/email_tv_marginLeftRight"
                    android:layout_marginTop="@dimen/email_tv_marginTop"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="@dimen/layout_margin"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/layout_margin" />

            </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_sing_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sign_up_screen_btn_marginLeftRight"
            android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
            android:layout_marginRight="@dimen/sign_up_screen_btn_marginLeftRight"
            android:background="@drawable/shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size"
            app:backgroundTint="@android:color/white"
            android:fontFamily="@font/roboto"
            android:layout_weight="1"
            app:backgroundTintMode="multiply" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/divide_line_marginTop"
                android:layout_centerVertical="true"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/tv_divide_line_marginLeftRight"
                    android:layout_marginRight="@dimen/tv_divide_line_marginLeftRight"
                    android:text="OR"
                    android:textColor="@color/black"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/divide_line_marginLeftRight"
                    android:layout_toLeftOf="@id/tvText"
                    android:background="@color/purple_700"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/divide_line_marginLeftRight"
                    android:layout_toRightOf="@id/tvText"
                    android:background="@color/purple_700"
                    />


            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tv_Register_marginTop"
                android:gravity="center"
                android:layout_weight="1"
                android:text="New User? Register Now"
                android:textColor="@color/black"
                android:textSize="@dimen/authentication_description_text_size"
                android:textStyle="bold" />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_weight="1"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/btn_phone_otp"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:backgroundTint="#66CDAA"
            android:text="Continue with Phone"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>